[gd_scene load_steps=23 format=3 uid="uid://c34s70owk0min"]

[ext_resource type="Script" path="res://Resource/src/script/SaveScreen.gd" id="1_fc5el"]
[ext_resource type="Texture2D" uid="uid://hnrjy8a8oboh" path="res://Resource/res/ui/tongyong/tanchuang_01.png" id="2_dfgoh"]
[ext_resource type="Texture2D" uid="uid://dh17e2vxl6dsh" path="res://Resource/res/ui/cundang/cundang_02.png" id="3_uu4u0"]
[ext_resource type="Texture2D" uid="uid://ddx14rsqsy7yh" path="res://Resource/res/ui/cundang/cundang_01.png" id="4_o0f7o"]
[ext_resource type="Texture2D" uid="uid://bwyf4pvk8ux1x" path="res://Resource/res/ui/tongyong/diban_02.png" id="5_725x3"]
[ext_resource type="Texture2D" uid="uid://cktg6sqwmb35j" path="res://Resource/res/ui/cundang/cundang_03.png" id="6_0nwiv"]
[ext_resource type="Texture2D" uid="uid://buegq30gqmdvv" path="res://Resource/res/ui/meishuzi/rili/month_4.png" id="7_jhifh"]
[ext_resource type="Texture2D" uid="uid://i7pw6x5nmdsl" path="res://Resource/res/ui/meishuzi/rili/day_20.png" id="8_lyiny"]
[ext_resource type="Texture2D" uid="uid://cjgdt55w4c81k" path="res://Resource/res/ui/tongyong/diban_00.png" id="9_fc8hj"]
[ext_resource type="Texture2D" uid="uid://peydsub36hrw" path="res://Resource/res/ui/tongyong/diban_03.png" id="11_aabwo"]
[ext_resource type="Texture2D" uid="uid://dcbfyqbqf5fdw" path="res://Resource/res/ui/tubiao/biaozhi/shux_01.png" id="12_ban0t"]
[ext_resource type="Texture2D" uid="uid://7cxoy4u1p2ic" path="res://Resource/res/ui/tubiao/biaozhi/shux_02.png" id="13_4rcso"]
[ext_resource type="Texture2D" uid="uid://bas582w0vkxy5" path="res://Resource/res/ui/tubiao/biaozhi/shux_03.png" id="14_yr34q"]
[ext_resource type="Texture2D" uid="uid://dmccg6r5dmih5" path="res://Resource/res/ui/tongyong/datade-1.png" id="15_7n1ub"]
[ext_resource type="Texture2D" uid="uid://c4cb1fygqwl3t" path="res://Resource/res/ui/tongyong/datade-2.png" id="16_b4oux"]
[ext_resource type="Texture2D" uid="uid://c882sfk0owmra" path="res://Resource/res/ui/tongyong/datade-3.png" id="17_b600f"]
[ext_resource type="Texture2D" uid="uid://bbp00ntyfmrm0" path="res://Resource/res/ui/tongyong/diban_01.png" id="18_hrh5a"]
[ext_resource type="Texture2D" uid="uid://c8omlwg84ocvg" path="res://Resource/res/ui/cundang/cundang_04.png" id="19_afr6v"]
[ext_resource type="Texture2D" uid="uid://bjvuksxdlpj52" path="res://Resource/res/ui/tongyong/guanbi_01.png" id="20_m7bhu"]
[ext_resource type="Texture2D" uid="uid://cslgx655iax1q" path="res://Resource/res/ui/tongyong/guanbi_02.png" id="21_kupx7"]
[ext_resource type="Texture2D" uid="uid://tlenwgtvjl8c" path="res://Resource/res/ui/tongyong/guanbi_04.png" id="22_gumft"]
[ext_resource type="Texture2D" uid="uid://bm2816h46gpjo" path="res://Resource/res/ui/tongyong/guanbi_03.png" id="23_efy22"]

[node name="SaveScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1600.0
script = ExtResource("1_fc5el")
metadata/_edit_vertical_guides_ = [360.0]

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 1600.0
color = Color(0, 0, 0, 0.392157)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(359, 783)
texture = ExtResource("2_dfgoh")

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D"]
position = Vector2(0, -405)
texture = ExtResource("3_uu4u0")

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D/Sprite2D"]
texture = ExtResource("4_o0f7o")

[node name="savedata" type="VBoxContainer" parent="Sprite2D"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -325.0
offset_top = -301.0
offset_right = -325.0
offset_bottom = -655.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="data1" type="Control" parent="Sprite2D/savedata"]
custom_minimum_size = Vector2(650, 178)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="notnull" type="Node2D" parent="Sprite2D/savedata/data1"]
position = Vector2(325, 88)

[node name="Diban01" type="Sprite2D" parent="Sprite2D/savedata/data1/notnull"]
position = Vector2(38, -1)
texture = ExtResource("5_725x3")

[node name="time" type="TextureRect" parent="Sprite2D/savedata/data1/notnull/Diban01"]
offset_left = -9.0
offset_top = -68.0
offset_right = 197.0
offset_bottom = 106.0
scale = Vector2(0.901276, 0.901276)
texture = ExtResource("6_0nwiv")

[node name="month" type="TextureRect" parent="Sprite2D/savedata/data1/notnull/Diban01/time"]
layout_mode = 0
offset_left = 44.3815
offset_top = 49.9292
offset_right = 120.382
offset_bottom = 100.929
texture = ExtResource("7_jhifh")

[node name="day" type="TextureRect" parent="Sprite2D/savedata/data1/notnull/Diban01/time"]
layout_mode = 0
offset_left = 93.2012
offset_top = 80.9963
offset_right = 175.201
offset_bottom = 131.996
texture = ExtResource("8_lyiny")

[node name="name" type="Label" parent="Sprite2D/savedata/data1/notnull/Diban01"]
offset_left = -192.0
offset_top = -82.0
offset_right = -4.0
offset_bottom = -37.0
theme_override_colors/font_color = Color(1, 0.454902, 0, 1)
theme_override_font_sizes/font_size = 30

[node name="Cundang04" type="Sprite2D" parent="Sprite2D/savedata/data1/notnull/Diban01"]
position = Vector2(-270, 0)
texture = ExtResource("9_fc8hj")

[node name="Zhujiaohead" type="Sprite2D" parent="Sprite2D/savedata/data1/notnull/Diban01/Cundang04"]
position = Vector2(1, -12)
scale = Vector2(0.99, 0.99)

[node name="XiaoDiban01" type="Sprite2D" parent="Sprite2D/savedata/data1/notnull/Diban01"]
position = Vector2(-85, -20)
texture = ExtResource("11_aabwo")

[node name="Shux01" type="Sprite2D" parent="Sprite2D/savedata/data1/notnull/Diban01/XiaoDiban01"]
position = Vector2(-72, -1)
scale = Vector2(0.95, 0.95)
texture = ExtResource("12_ban0t")

[node name="Label" type="Label" parent="Sprite2D/savedata/data1/notnull/Diban01/XiaoDiban01"]
offset_left = -40.0
offset_top = -19.0
offset_right = 49.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(1, 0.737255, 0.309804, 1)
theme_override_font_sizes/font_size = 26
text = "99999"

[node name="XiaoDiban02" type="Sprite2D" parent="Sprite2D/savedata/data1/notnull/Diban01"]
position = Vector2(-85, 17)
texture = ExtResource("11_aabwo")

[node name="Shux02" type="Sprite2D" parent="Sprite2D/savedata/data1/notnull/Diban01/XiaoDiban02"]
position = Vector2(-72, -1)
texture = ExtResource("13_4rcso")

[node name="Label" type="Label" parent="Sprite2D/savedata/data1/notnull/Diban01/XiaoDiban02"]
offset_left = -40.0
offset_top = -19.0
offset_right = 49.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.564706, 0.701961, 0.956863, 1)
theme_override_font_sizes/font_size = 26
text = "99999"

[node name="XiaoDiban03" type="Sprite2D" parent="Sprite2D/savedata/data1/notnull/Diban01"]
position = Vector2(-85, 53)
texture = ExtResource("11_aabwo")

[node name="Shux03" type="Sprite2D" parent="Sprite2D/savedata/data1/notnull/Diban01/XiaoDiban03"]
position = Vector2(-76, 1)
texture = ExtResource("14_yr34q")

[node name="Label" type="Label" parent="Sprite2D/savedata/data1/notnull/Diban01/XiaoDiban03"]
offset_left = -40.0
offset_top = -19.0
offset_right = 49.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.862745, 0.560784, 0.968627, 1)
theme_override_font_sizes/font_size = 26
text = "99999"

[node name="datadel" type="TextureButton" parent="Sprite2D/savedata/data1/notnull/Diban01"]
offset_left = 190.0
offset_top = 34.0
offset_right = 261.0
offset_bottom = 87.0
texture_normal = ExtResource("15_7n1ub")
texture_pressed = ExtResource("16_b4oux")
texture_hover = ExtResource("17_b600f")

[node name="null" type="Node2D" parent="Sprite2D/savedata/data1"]
visible = false
position = Vector2(325, 88)
metadata/color = Color(1, 1, 1, 1)

[node name="Diban01" type="Sprite2D" parent="Sprite2D/savedata/data1/null"]
modulate = Color(1, 1, 1, 0.478431)
texture = ExtResource("18_hrh5a")

[node name="Cundang04" type="Sprite2D" parent="Sprite2D/savedata/data1/null"]
texture = ExtResource("19_afr6v")

[node name="data2" type="Control" parent="Sprite2D/savedata"]
custom_minimum_size = Vector2(650, 178)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="notnull" type="Node2D" parent="Sprite2D/savedata/data2"]
position = Vector2(325, 88)

[node name="Diban01" type="Sprite2D" parent="Sprite2D/savedata/data2/notnull"]
position = Vector2(38, -1)
texture = ExtResource("5_725x3")

[node name="time" type="TextureRect" parent="Sprite2D/savedata/data2/notnull/Diban01"]
offset_left = -9.0
offset_top = -68.0
offset_right = 197.0
offset_bottom = 106.0
scale = Vector2(0.901276, 0.901276)
texture = ExtResource("6_0nwiv")

[node name="month" type="TextureRect" parent="Sprite2D/savedata/data2/notnull/Diban01/time"]
layout_mode = 0
offset_left = 44.3815
offset_top = 49.9292
offset_right = 120.382
offset_bottom = 100.929
texture = ExtResource("7_jhifh")

[node name="day" type="TextureRect" parent="Sprite2D/savedata/data2/notnull/Diban01/time"]
layout_mode = 0
offset_left = 93.2012
offset_top = 80.9963
offset_right = 175.201
offset_bottom = 131.996
texture = ExtResource("8_lyiny")

[node name="name" type="Label" parent="Sprite2D/savedata/data2/notnull/Diban01"]
offset_left = -192.0
offset_top = -82.0
offset_right = -4.0
offset_bottom = -37.0
theme_override_colors/font_color = Color(1, 0.454902, 0, 1)
theme_override_font_sizes/font_size = 30

[node name="Cundang04" type="Sprite2D" parent="Sprite2D/savedata/data2/notnull/Diban01"]
position = Vector2(-270, 0)
texture = ExtResource("9_fc8hj")

[node name="Zhujiaohead" type="Sprite2D" parent="Sprite2D/savedata/data2/notnull/Diban01/Cundang04"]
position = Vector2(1, -12)
scale = Vector2(0.99, 0.99)

[node name="XiaoDiban01" type="Sprite2D" parent="Sprite2D/savedata/data2/notnull/Diban01"]
position = Vector2(-85, -20)
texture = ExtResource("11_aabwo")

[node name="Shux01" type="Sprite2D" parent="Sprite2D/savedata/data2/notnull/Diban01/XiaoDiban01"]
position = Vector2(-72, -1)
scale = Vector2(0.95, 0.95)
texture = ExtResource("12_ban0t")

[node name="Label" type="Label" parent="Sprite2D/savedata/data2/notnull/Diban01/XiaoDiban01"]
offset_left = -40.0
offset_top = -19.0
offset_right = 49.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(1, 0.737255, 0.309804, 1)
theme_override_font_sizes/font_size = 26
text = "99999"

[node name="XiaoDiban02" type="Sprite2D" parent="Sprite2D/savedata/data2/notnull/Diban01"]
position = Vector2(-85, 17)
texture = ExtResource("11_aabwo")

[node name="Shux02" type="Sprite2D" parent="Sprite2D/savedata/data2/notnull/Diban01/XiaoDiban02"]
position = Vector2(-72, -1)
texture = ExtResource("13_4rcso")

[node name="Label" type="Label" parent="Sprite2D/savedata/data2/notnull/Diban01/XiaoDiban02"]
offset_left = -40.0
offset_top = -19.0
offset_right = 49.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.564706, 0.701961, 0.956863, 1)
theme_override_font_sizes/font_size = 26
text = "99999"

[node name="XiaoDiban03" type="Sprite2D" parent="Sprite2D/savedata/data2/notnull/Diban01"]
position = Vector2(-85, 53)
texture = ExtResource("11_aabwo")

[node name="Shux03" type="Sprite2D" parent="Sprite2D/savedata/data2/notnull/Diban01/XiaoDiban03"]
position = Vector2(-76, 1)
texture = ExtResource("14_yr34q")

[node name="Label" type="Label" parent="Sprite2D/savedata/data2/notnull/Diban01/XiaoDiban03"]
offset_left = -40.0
offset_top = -19.0
offset_right = 49.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.862745, 0.560784, 0.968627, 1)
theme_override_font_sizes/font_size = 26
text = "99999"

[node name="datadel" type="TextureButton" parent="Sprite2D/savedata/data2/notnull/Diban01"]
offset_left = 190.0
offset_top = 34.0
offset_right = 261.0
offset_bottom = 87.0
texture_normal = ExtResource("15_7n1ub")
texture_pressed = ExtResource("16_b4oux")
texture_hover = ExtResource("17_b600f")

[node name="null" type="Node2D" parent="Sprite2D/savedata/data2"]
visible = false
position = Vector2(325, 88)
metadata/color = Color(1, 1, 1, 1)

[node name="Diban01" type="Sprite2D" parent="Sprite2D/savedata/data2/null"]
modulate = Color(1, 1, 1, 0.478431)
texture = ExtResource("18_hrh5a")

[node name="Cundang04" type="Sprite2D" parent="Sprite2D/savedata/data2/null"]
texture = ExtResource("19_afr6v")

[node name="data3" type="Control" parent="Sprite2D/savedata"]
custom_minimum_size = Vector2(650, 178)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="notnull" type="Node2D" parent="Sprite2D/savedata/data3"]
position = Vector2(325, 88)

[node name="Diban01" type="Sprite2D" parent="Sprite2D/savedata/data3/notnull"]
position = Vector2(38, -1)
texture = ExtResource("5_725x3")

[node name="time" type="TextureRect" parent="Sprite2D/savedata/data3/notnull/Diban01"]
offset_left = -9.0
offset_top = -68.0
offset_right = 197.0
offset_bottom = 106.0
scale = Vector2(0.901276, 0.901276)
texture = ExtResource("6_0nwiv")

[node name="month" type="TextureRect" parent="Sprite2D/savedata/data3/notnull/Diban01/time"]
layout_mode = 0
offset_left = 44.3815
offset_top = 49.9292
offset_right = 120.382
offset_bottom = 100.929
texture = ExtResource("7_jhifh")

[node name="day" type="TextureRect" parent="Sprite2D/savedata/data3/notnull/Diban01/time"]
layout_mode = 0
offset_left = 93.2012
offset_top = 80.9963
offset_right = 175.201
offset_bottom = 131.996
texture = ExtResource("8_lyiny")

[node name="name" type="Label" parent="Sprite2D/savedata/data3/notnull/Diban01"]
offset_left = -192.0
offset_top = -82.0
offset_right = -4.0
offset_bottom = -37.0
theme_override_colors/font_color = Color(1, 0.454902, 0, 1)
theme_override_font_sizes/font_size = 30

[node name="Cundang04" type="Sprite2D" parent="Sprite2D/savedata/data3/notnull/Diban01"]
position = Vector2(-270, 0)
texture = ExtResource("9_fc8hj")

[node name="Zhujiaohead" type="Sprite2D" parent="Sprite2D/savedata/data3/notnull/Diban01/Cundang04"]
position = Vector2(1, -12)
scale = Vector2(0.99, 0.99)

[node name="XiaoDiban01" type="Sprite2D" parent="Sprite2D/savedata/data3/notnull/Diban01"]
position = Vector2(-85, -20)
texture = ExtResource("11_aabwo")

[node name="Shux01" type="Sprite2D" parent="Sprite2D/savedata/data3/notnull/Diban01/XiaoDiban01"]
position = Vector2(-72, -1)
scale = Vector2(0.95, 0.95)
texture = ExtResource("12_ban0t")

[node name="Label" type="Label" parent="Sprite2D/savedata/data3/notnull/Diban01/XiaoDiban01"]
offset_left = -40.0
offset_top = -19.0
offset_right = 49.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(1, 0.737255, 0.309804, 1)
theme_override_font_sizes/font_size = 26
text = "99999"

[node name="XiaoDiban02" type="Sprite2D" parent="Sprite2D/savedata/data3/notnull/Diban01"]
position = Vector2(-85, 17)
texture = ExtResource("11_aabwo")

[node name="Shux02" type="Sprite2D" parent="Sprite2D/savedata/data3/notnull/Diban01/XiaoDiban02"]
position = Vector2(-72, -1)
texture = ExtResource("13_4rcso")

[node name="Label" type="Label" parent="Sprite2D/savedata/data3/notnull/Diban01/XiaoDiban02"]
offset_left = -40.0
offset_top = -19.0
offset_right = 49.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.564706, 0.701961, 0.956863, 1)
theme_override_font_sizes/font_size = 26
text = "99999"

[node name="XiaoDiban03" type="Sprite2D" parent="Sprite2D/savedata/data3/notnull/Diban01"]
position = Vector2(-85, 53)
texture = ExtResource("11_aabwo")

[node name="Shux03" type="Sprite2D" parent="Sprite2D/savedata/data3/notnull/Diban01/XiaoDiban03"]
position = Vector2(-76, 1)
texture = ExtResource("14_yr34q")

[node name="Label" type="Label" parent="Sprite2D/savedata/data3/notnull/Diban01/XiaoDiban03"]
offset_left = -40.0
offset_top = -19.0
offset_right = 49.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.862745, 0.560784, 0.968627, 1)
theme_override_font_sizes/font_size = 26
text = "99999"

[node name="datadel" type="TextureButton" parent="Sprite2D/savedata/data3/notnull/Diban01"]
offset_left = 190.0
offset_top = 34.0
offset_right = 261.0
offset_bottom = 87.0
texture_normal = ExtResource("15_7n1ub")
texture_pressed = ExtResource("16_b4oux")
texture_hover = ExtResource("17_b600f")

[node name="null" type="Node2D" parent="Sprite2D/savedata/data3"]
visible = false
position = Vector2(325, 88)
metadata/color = Color(1, 1, 1, 1)

[node name="Diban01" type="Sprite2D" parent="Sprite2D/savedata/data3/null"]
modulate = Color(1, 1, 1, 0.478431)
texture = ExtResource("18_hrh5a")

[node name="Cundang04" type="Sprite2D" parent="Sprite2D/savedata/data3/null"]
texture = ExtResource("19_afr6v")

[node name="data4" type="Control" parent="Sprite2D/savedata"]
custom_minimum_size = Vector2(650, 178)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="notnull" type="Node2D" parent="Sprite2D/savedata/data4"]
position = Vector2(325, 88)

[node name="Diban01" type="Sprite2D" parent="Sprite2D/savedata/data4/notnull"]
position = Vector2(38, -1)
texture = ExtResource("5_725x3")

[node name="time" type="TextureRect" parent="Sprite2D/savedata/data4/notnull/Diban01"]
offset_left = -9.0
offset_top = -68.0
offset_right = 197.0
offset_bottom = 106.0
scale = Vector2(0.901276, 0.901276)
texture = ExtResource("6_0nwiv")

[node name="month" type="TextureRect" parent="Sprite2D/savedata/data4/notnull/Diban01/time"]
layout_mode = 0
offset_left = 44.3815
offset_top = 49.9292
offset_right = 120.382
offset_bottom = 100.929
texture = ExtResource("7_jhifh")

[node name="day" type="TextureRect" parent="Sprite2D/savedata/data4/notnull/Diban01/time"]
layout_mode = 0
offset_left = 93.2012
offset_top = 80.9963
offset_right = 175.201
offset_bottom = 131.996
texture = ExtResource("8_lyiny")

[node name="name" type="Label" parent="Sprite2D/savedata/data4/notnull/Diban01"]
offset_left = -192.0
offset_top = -82.0
offset_right = -4.0
offset_bottom = -37.0
theme_override_colors/font_color = Color(1, 0.454902, 0, 1)
theme_override_font_sizes/font_size = 30

[node name="Cundang04" type="Sprite2D" parent="Sprite2D/savedata/data4/notnull/Diban01"]
position = Vector2(-270, 0)
texture = ExtResource("9_fc8hj")

[node name="Zhujiaohead" type="Sprite2D" parent="Sprite2D/savedata/data4/notnull/Diban01/Cundang04"]
position = Vector2(1, -12)
scale = Vector2(0.99, 0.99)

[node name="XiaoDiban01" type="Sprite2D" parent="Sprite2D/savedata/data4/notnull/Diban01"]
position = Vector2(-85, -20)
texture = ExtResource("11_aabwo")

[node name="Shux01" type="Sprite2D" parent="Sprite2D/savedata/data4/notnull/Diban01/XiaoDiban01"]
position = Vector2(-72, -1)
scale = Vector2(0.95, 0.95)
texture = ExtResource("12_ban0t")

[node name="Label" type="Label" parent="Sprite2D/savedata/data4/notnull/Diban01/XiaoDiban01"]
offset_left = -40.0
offset_top = -19.0
offset_right = 49.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(1, 0.737255, 0.309804, 1)
theme_override_font_sizes/font_size = 26
text = "99999"

[node name="XiaoDiban02" type="Sprite2D" parent="Sprite2D/savedata/data4/notnull/Diban01"]
position = Vector2(-85, 17)
texture = ExtResource("11_aabwo")

[node name="Shux02" type="Sprite2D" parent="Sprite2D/savedata/data4/notnull/Diban01/XiaoDiban02"]
position = Vector2(-72, -1)
texture = ExtResource("13_4rcso")

[node name="Label" type="Label" parent="Sprite2D/savedata/data4/notnull/Diban01/XiaoDiban02"]
offset_left = -40.0
offset_top = -19.0
offset_right = 49.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.564706, 0.701961, 0.956863, 1)
theme_override_font_sizes/font_size = 26
text = "99999"

[node name="XiaoDiban03" type="Sprite2D" parent="Sprite2D/savedata/data4/notnull/Diban01"]
position = Vector2(-85, 53)
texture = ExtResource("11_aabwo")

[node name="Shux03" type="Sprite2D" parent="Sprite2D/savedata/data4/notnull/Diban01/XiaoDiban03"]
position = Vector2(-76, 1)
texture = ExtResource("14_yr34q")

[node name="Label" type="Label" parent="Sprite2D/savedata/data4/notnull/Diban01/XiaoDiban03"]
offset_left = -40.0
offset_top = -19.0
offset_right = 49.0
offset_bottom = 20.0
theme_override_colors/font_color = Color(0.862745, 0.560784, 0.968627, 1)
theme_override_font_sizes/font_size = 26
text = "99999"

[node name="datadel" type="TextureButton" parent="Sprite2D/savedata/data4/notnull/Diban01"]
offset_left = 190.0
offset_top = 34.0
offset_right = 261.0
offset_bottom = 87.0
texture_normal = ExtResource("15_7n1ub")
texture_pressed = ExtResource("16_b4oux")
texture_hover = ExtResource("17_b600f")

[node name="null" type="Node2D" parent="Sprite2D/savedata/data4"]
visible = false
position = Vector2(325, 88)
metadata/color = Color(1, 1, 1, 1)

[node name="Diban01" type="Sprite2D" parent="Sprite2D/savedata/data4/null"]
modulate = Color(1, 1, 1, 0.478431)
texture = ExtResource("18_hrh5a")

[node name="Cundang04" type="Sprite2D" parent="Sprite2D/savedata/data4/null"]
texture = ExtResource("19_afr6v")

[node name="CloseButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 301.0
offset_top = 1257.0
offset_right = 361.0
offset_bottom = 1317.0
scale = Vector2(1.98786, 1.98786)
texture_normal = ExtResource("20_m7bhu")
texture_pressed = ExtResource("21_kupx7")
texture_hover = ExtResource("22_gumft")
texture_disabled = ExtResource("23_efy22")
